--- a/src/stylesheet/Menu.css
+++ b/src/stylesheet/Menu.css
@@ -1,5 +1,4 @@
-/* Menu Component Specific Styling */
-
+/* Menu.css */
 .menu {
   background-color: var(--primary-color);
   padding: 1rem 2rem;
@@ -19,14 +18,10 @@
   padding: 0;
 }
 
-.menu li {
-  font-size: 1rem;
-  font-weight: bold;
-}
-
 .menu a {
   color: white;
   text-decoration: none;
+  font-weight: bold;
   transition:
     color 0.3s ease,
     transform 0.3s ease;
@@ -35,17 +30,4 @@
 .menu a:hover {
   color: var(--accent-color);
   transform: scale(1.1);
-}
-
-/* Mobile Menu Styling */
-@media (max-width: 768px) {
-  .menu ul {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
-  }
-
-  .menu li {
-    font-size: 1rem;
-  }
 }
