--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -2,15 +2,15 @@
 :root {
   --primary-color: #4e4e6a; /* Deep desaturated blue-gray for primary elements */
   --secondary-color: #2e2e38; /* Soft, warm dark gray for background */
-  --accent-color: #f28c28; /* Warm, inviting orange for highlights */
-  --title-color: #f28c28; /* Same inviting orange for titles */
+  --accent-color: #d4af37; /* Warm, inviting orange for highlights */
+  --title-color: #d4af37; /* Same inviting orange for titles */
   --text-color: #f5f5f5; /* Light warm gray for readable text */
   --muted-color: #b8b8c0; /* Subtle muted gray for secondary text */
   --card-bg: #393944; /* Soft, dark neutral for card backgrounds */
   --link-color: #f28c28; /* Warm orange for links */
   --link-hover-color: #f5a623; /* Slightly brighter orange for hover */
   --shadow-color: rgba(0, 0, 0, 0.2); /* Soft shadow for depth */
-  --font-family: "Poppins", sans-serif; /* Clean and modern font */
+  --font-family: Verdana, Geneva, sans-serif; /* Clean and modern font */
   --hero-gradient: linear-gradient(
     to right,
     #4e4e6a,
@@ -51,7 +51,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--font-family);
   color: var(--text-color);
   margin-bottom: 0.5em;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
@@ -143,7 +143,6 @@ a:focus {
 .title h1 {
   font-size: 3rem;
   color: var(--title-color);
-  text-transform: uppercase;
   margin-bottom: 0.5rem;
   text-shadow: 2px 2px 5px var(--shadow-color);
 }
@@ -254,7 +253,7 @@ a:focus {
 
 /* Navigation */
 .menu {
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   padding: 15px 30px;
   border-radius: 15px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
@@ -268,7 +267,6 @@ a:focus {
 }
 
 .menu:hover {
-  background-color: var(--accent-color);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
@@ -367,7 +365,7 @@ footer {
 }
 
 .images img {
-  width: 250px;
+  width: 33%;
   height: auto;
   border-radius: 15px;
   box-shadow: 0 5px 15px var(--shadow-color);
@@ -416,7 +414,7 @@ footer {
 }
 
 .section p {
-  font-size: 1rem;
+  font-size: 1.4rem;
   color: var(--text-color);
   line-height: 1.8;
 }
